--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,11 +1,12 @@
 [target.xtensa-esp32-none-elf]
-runner = "espflash flash --monitor --chip esp32"
+runner = "espflash flash --monitor --chip esp32 -L defmt"
 
 [env]
 
 [build]
 rustflags = [
   "-C", "link-arg=-nostartfiles",
+  "-C", "link-arg=-Tdefmt.x",
   "-Z", "stack-protector=all",
 ]
 
