--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,15 +18,15 @@ esp-hal-embassy  = { version = "0.8.1", features = ["esp32"] }
 static_cell      = { version = "2.1.0", features = ["nightly"] }
 embassy-net = { version = "0.7.0", features = ["medium-ethernet", "proto-ipv4", "dhcpv4", "tcp", "medium-ip"] }
 embassy-net-wiznet = { version = "0.2.0" }
-esp-println = { version = "0.14.0", features = ["esp32", "log-04"] }
-log = "0.4.27"
+esp-println = { version = "0.14.0", features = ["esp32", "log-04", "defmt-espflash"] }
 embedded-hal-bus = { version = "0.3.0", features = ["async"] }
-embassy-futures = { version = "0.1.1", features = ["log"] }
+embassy-futures = { version = "0.1.1", features = ["defmt"] }
 embedded-io-async = "0.6.1"
 esp-alloc = "0.8.0"
-esp-bsp = { version = "0.4.1", features = ["m5stack-core2"] }
-embassy-sync = { version = "0.6.2", features = ["log"] }
+embassy-sync = { version = "0.6.2", features = ["defmt"] }
 embassy-embedded-hal = "0.3.0"
+defmt = "1.0.1"
+esp-backtrace = { version = "0.16.0", features = ["defmt", "esp32", "exception-handler", "panic-handler"] }
 
 
 [profile.dev]
