--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,7 +1,8 @@
 [target.xtensa-esp32-none-elf]
-runner = "espflash flash --monitor --chip esp32 -L defmt"
+runner = "espflash flash --monitor --chip esp32 --log-format defmt"
 
 [env]
+DEFMT_LOG="info"
 
 [build]
 rustflags = [
