Switch to async LCD interface
This allows us to share the SPI interface between the Ethernet and the LCD

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,8 +28,9 @@ embassy-embedded-hal = "0.3.0"
 defmt = "1.0.1"
 esp-backtrace = { version = "0.16.0", features = ["defmt", "esp32", "exception-handler", "panic-handler"] }
 picoserve = { version = "0.16.0", features = ["defmt", "embassy"] }
-mipidsi = "0.9.0"
 embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
+lcd-async = "0.1.1"
+embedded-graphics = { version = "0.8.1", features = ["defmt"] }
 
 
 [profile.dev]
