Fix LCD initialization

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ esp-println = { version = "0.14.0", features = ["esp32", "log-04", "defmt-espfla
 embedded-hal-bus = { version = "0.3.0", features = ["async"] }
 embassy-futures = { version = "0.1.1", features = ["defmt"] }
 embedded-io-async = "0.6.1"
-esp-alloc = "0.8.0"
+esp-alloc = { version = "0.8.0", features = ["internal-heap-stats", "nightly"] }
 embassy-sync = { version = "0.6.2", features = ["defmt"] }
 embassy-embedded-hal = "0.3.0"
 defmt = "1.0.1"
