--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ version = "0.1.0"
 name = "ptp-esp32"
 path = "./src/main.rs"
 
+[features]
+ethernet = []
+
 [dependencies]
 esp-bootloader-esp-idf = "0.1.0"
 esp-hal                = { version = "=1.0.0-beta.1", features = ["esp32", "psram", "unstable"] }
@@ -20,7 +23,6 @@ embassy-net = { version = "0.7.0", features = ["medium-ethernet", "proto-ipv4", 
 embassy-net-wiznet = { version = "0.2.0" }
 esp-println = { version = "0.14.0", features = ["esp32"] }
 embedded-hal-bus = { version = "0.3.0", features = ["async"] }
-embassy-futures = { version = "0.1.1" }
 embedded-io-async = "0.6.1"
 esp-alloc = { version = "0.8.0", features = ["nightly"] }
 embassy-sync = { version = "0.6.2" }
@@ -33,7 +35,8 @@ embedded-graphics = { version = "0.8.1" }
 axp192 = "0.2.0"
 embedded-hal = { version = "1.0.0"}
 allocator-api2 = { version = "0.3", default-features = false, features = ["alloc"] }
-
+cfg-if = "1.0.1"
+embassy-futures = "0.1.1"
 
 [profile.dev]
 # Rust debug is too slow.
