Revert "Remove defmt until I can get it to work"
This reverts commit b2a4186be86430af4600addce315f9dd03451de1.

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,11 +1,13 @@
 [target.xtensa-esp32-none-elf]
-runner = "espflash flash --monitor --chip esp32"
+runner = "espflash flash --monitor --chip esp32 --log-format defmt"
 
 [env]
+DEFMT_LOG="info"
 
 [build]
 rustflags = [
   "-C", "link-arg=-nostartfiles",
+  "-C", "link-arg=-Tdefmt.x",
   "-Z", "stack-protector=all",
 ]
 
