Fix tests runnner
The standard Rust test runner won't work here, so we need to disable the
harness and use embedded-test here. However, we need to make sure
certain things are linked into our final binary or it won't work.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,11 @@ version = "0.1.0"
 [[bin]]
 name = "ptp-esp32"
 path = "./src/main.rs"
+harness = false
+
+[[test]]
+name = "integration"
+harness = false
 
 [features]
 ethernet = []
@@ -54,3 +59,6 @@ incremental      = false
 lto              = 'fat'
 opt-level        = 's'
 overflow-checks  = false
+
+[dev-dependencies]
+embedded-test = { version = "0.6.2", features = ["xtensa-semihosting", "defmt", "embassy", "external-executor"] }
