--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ embedded-graphics = { version = "0.8.1", features = ["defmt"] }
 axp192 = "0.2.0"
 embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
 cfg-if = "1.0.1"
+ft6x36 = { version = "0.6.2", features = ["defmt"] }
 
 [profile.dev]
 # Rust debug is too slow.
